maze.lessons.maze.island.IslandMaze.scala.error
Escaper:10: error: Unit does not take parameters
	setDirection(Direction.NORTH) {
                                      ^